--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=Arduboy-BistercianNumbers
 version=1.0
 author=Francisco Alvarez
 maintainer=Francisco Alvarez
-sentence=Tiny 4x4 Numerical Display for Arduboy.
-paragraph=Subclasses Arduino::drawBitmap.
+sentence=Tiny 4x4 Bistercian Numerical Display for the Arduboy game system.
+paragraph=Displays any numerical value up to 9999 in a 4x4 space, intended as proof of concept and flavour to some games.
 category=Display
 url=https://github.com/franalvarez21/Arduboy-BistercianNumbers
 architectures=avr
